@@ -5,6 +5,7 @@ Update colours for chart lines of transaction-type
 Add blank tags for missing columns in planned-disbursement
 Update toggle buttons css in SAVi
 Update all themes and print-friendly
+Move transaction-type code 11 before code 1
 
 
 Development Portal (2019-01-05 shi)
